# slate

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml
src/slate/: __init__.py  __main__.py  cli.py  event_logger.py  mcp_server.py
