[project]
name = "slate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zzstoatzz", email = "thrast36@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "slatedb>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
